--- a/productosespecificos.html
+++ b/productosespecificos.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="esindex.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <title>Zamazor</title>
 </head>
 
@@ -141,6 +142,42 @@
         </div>
     </div>
     </div>
+    <footer class="footer">
+        <div class="piedepágina">
+            <div class="row">
+                <div class="footer-col">
+                    <p>Compañia</p>
+                    <ul>
+                        <li><a href="aboutUs.html">Nosotros</a></li>
+                        <li><a href="#">Servicios</a></li>
+                        <li><a href="#">Politica de Privacidad</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <p>Tienda</p>
+                    <ul>
+                        <li><a href="Cards.html">Productos</a></li>
+                        <li><a href="productosespecificos.html">Accesorios</a></li>
+                        <li><a href="Carrito.html">Carrito</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <p>Redes Sociales</p>
+                    <div class="redes-sociales">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-whatsapp"></i></a>
+                    </div>
+                </div>
+                <div class="footer-col">
+                    <div class="copyright" style="margin: 150px 0 0 150px;">
+                        <a href="#"><i class="fa-regular fa-copyright">Zamazor2024</i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+</footer>
 </body>
 
 </html>
